--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_change_password">Cambiar contraseña</string>
     <string name="hello_world">Hello world!</string>
     <string name="error_UnableConnectToSGEService">Error: No fue posible establecer conexión con el servicio SGE. \nAsegúrese de tener habilitada la conexion Wi-Fi y vuela a intentarlo.</string>
+    <string name="title_activity_table_orders">Consultar Pedidos Mesa</string>
 
 </resources>
